2eme/LPO/jdbc_car/src/main/java/org/example/invalidCarException/BusinessException.java
package org.example.invalidCarException;

public class BusinessException extends Exception {

    public BusinessException(String message) {
        super(message);
    }

}
